--- a/templates/survey/survey_form.html
+++ b/templates/survey/survey_form.html
@@ -1,55 +1,69 @@
 {% load static %}
 
 <head>
+    <title>{{ survey.name }}</title>
+
+    <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'survey/styles.css' %}">
 </head>
 
-<section class="wrap-notification">
-    <div class="container">
-        <div class="title-block with-hand green"><span>{{ survey.name }}</span></div>
-        <div class="wrap-form type-paper">
+<body>
+    <section class="wrap-notification">
+        <div class="container">
+            <div class="title-block with-hand green"><span>{{ survey.page_title }}</span></div>
 
-            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+                {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-            <form action="{% url 'survey:submit' %}?SurveyID={{survey.id}}&username={{username}}" method="post">
-                {% csrf_token %}
-                {% for question in survey.questions %}
-                    <p>{{ question.text }}</p>
+                <form action="{% url 'survey:submit' %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="survey_id" value="{{ survey.id }}">
+                    <input type="hidden" name="username" value="{{ username }}">
                     
                     
-                    {% if question.input_type == question.SLIDER %}
-                            <input type="range" name="{{ question.id }}" min="{{ question.min_value }}" max="{{ question.max_value }}" step="1" value="{{ question.min_value }}" onchange="showValue(this.value)" />
-                            <span id="range">{{ question.min_value }}</span>
-                            <script type="text/javascript">
-                            function showValue(newValue)
-                            {
-	                            document.getElementById("range").innerHTML=newValue;
-                            }
-                            </script>
-                            
-
+                    <div class="wrap-form type-paper">
+                    
+                    {% for question in survey.questions %}
+                        <p>{{ question.text }}</p>
                         
-                    {% elif question.input_type == question.DROPDOWN %}
-                        <select name="{{ question.id }}">
-                        {% for choice in question.choices %}
-                            <option value="{{ choice.id }}">{{ choice.text_value }}</option>
-                        {% endfor %}
-                        </select>                    
-                    {% else %}
-                        {% for choice in question.choices %}
-                            {% if choice.choice_type == choice.NORMAL %}
-                                <input type="{{question.get_input_type_display}}" name="{{ question.id }}" id="question{{ forloop.parentloop.counter }}choice{{ choice.id }}" value="{{ choice.id }}" />
-                                <label for="choice{{ forloop.counter }}">{{ choice.text_value }}</label><br />
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
+                        
+                        {% if question.input_type == question.SLIDER %}
+                                <input type="range" name="{{ question.id }}" min="{{ question.min_value }}" max="{{ question.max_value }}" step="1" value="{{ question.min_value }}" onchange="showValue(this.value)" />
+                                <span id="range">{{ question.min_value }}</span>
+                                <script type="text/javascript">
+                                function showValue(newValue)
+                                {
+	                                document.getElementById("range").innerHTML=newValue;
+                                }
+                                </script>              
+                        {% elif question.input_type == question.DROPDOWN %}
+                            <div class="wrap-dropdown-select">
+                                <div class="class="btn-group dropdown-group dropdown-select">
+                                    <select name="{{ question.id }}">
+                                    {% for choice in question.choices %}
+                                        <option value="{{ choice.id }}">{{ choice.text_value }}</option>
+                                    {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                        {% else %}
+                            {% for choice in question.choices %}
+                                {% if choice.choice_type == choice.NORMAL %}
+                                    <input type="{{question.get_input_type_display}}" name="{{ question.id }}" id="question{{ forloop.parentloop.counter }}choice{{ choice.id }}" value="{{ choice.id }}" />
+                                    <label class="wrap-{{question.get_input_type_display}}" for="choice{{ forloop.counter }}">{{ choice.text_value }}</label><br />
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+                        
+                    {% endfor %}
+                    </div>
                     
-                {% endfor %}
-                <div class="wrap-btn-submit">
-                    <button type="submit" class="btn btn-contest">Submit</button>
-                </div>
-            </form>
+                    <div class="wrap-btn-submit">
+                        <button type="submit" class="btn btn-contest">Submit</button>
+                    </div>
+                </form>
+            
         </div>
-    </div>
-</section>
+    </section>
+
+</body>
 
